[gd_scene load_steps=3 format=3 uid="uid://bevwk1yc65svm"]

[ext_resource type="Script" uid="uid://jss17aspfsqh" path="res://scripts/loginscreen.gd" id="1_e8ckn"]
[ext_resource type="Theme" uid="uid://dgwn8knwt1m3r" path="res://assets/Themes/main_theme.tres" id="1_frse4"]

[node name="login_screen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_e8ckn")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.114897, 0.114897, 0.114897, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 48

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="BackButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("1_frse4")
theme_type_variation = &"LeaderboardsButton"
text = "BACK"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="LoginLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("1_frse4")
theme_override_colors/font_color = Color(0.54099, 0.54099, 0.54099, 1)
theme_override_font_sizes/font_size = 50
text = "LOGIN"

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(480.995, 60)
layout_mode = 2
theme_override_constants/separation = 48
alignment = 1

[node name="VBox_Labels" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2

[node name="UsernameLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer3/VBox_Labels"]
layout_mode = 2
theme = ExtResource("1_frse4")
theme_override_font_sizes/font_size = 40
text = "USERNAME:"

[node name="PasswordLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer3/VBox_Labels"]
layout_mode = 2
theme = ExtResource("1_frse4")
theme_override_font_sizes/font_size = 40
text = "PASSWORD:"

[node name="VBoxLineEdits" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2

[node name="UsernameLineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/HBoxContainer3/VBoxLineEdits"]
layout_mode = 2
theme = ExtResource("1_frse4")
theme_override_font_sizes/font_size = 40

[node name="PasswordLineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/HBoxContainer3/VBoxLineEdits"]
layout_mode = 2
theme = ExtResource("1_frse4")
theme_override_font_sizes/font_size = 40
secret = true

[node name="HBoxContainer6" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="ForgotPassword_LinkButton" type="LinkButton" parent="MarginContainer/VBoxContainer/HBoxContainer6"]
layout_mode = 2
theme = ExtResource("1_frse4")
text = "FORGOT PASSWORD?"

[node name="HBoxContainer7" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="StaySignedCheckBox" type="CheckBox" parent="MarginContainer/VBoxContainer/HBoxContainer7"]
layout_mode = 2
theme = ExtResource("1_frse4")
theme_override_font_sizes/font_size = 20
text = "STAY SIGNED IN FOR 30 DAYS"

[node name="HBoxContainer5" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer5"]
custom_minimum_size = Vector2(701, 0)
layout_mode = 2

[node name="InfoLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer5/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_frse4")
horizontal_alignment = 1
autowrap_mode = 1

[node name="LoginButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer5"]
layout_mode = 2
theme = ExtResource("1_frse4")
theme_type_variation = &"LeaderboardsButton"
text = "LOGIN"

[node name="HBoxContainer4" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1
